--- a/rnn_demo.html
+++ b/rnn_demo.html
@@ -2,6 +2,9 @@
 <head>
 <title>Generating Audio Using RNNS</title>
  <meta charset="UTF-8">
+
+<link href="https://fonts.googleapis.com/css?family=Arvo|Nunito+Sans|Pathway+Gothic+One" rel="stylesheet">
+
 <link rel="stylesheet" type="text/css" href="rnn_demo.css">
 <style>
 
@@ -36,11 +39,11 @@
 </head>
 
 
-<body>
+<body onload="add_animations()">
 <!--=========================Title=========================-->
 <div class="containing_div">
-    <h1 class="centered_text">Generating Audio Using Recurrent Neural Networks</h1>
-    <h2 class="centered_text">a PhD Dissertation by Andrew Pfalz</h2>
+    <h1 class="centered_text title">Generating Audio Using Recurrent Neural Networks</h1>
+    <h2 class="centered_text title">a PhD Dissertation by Andrew Pfalz</h2>
     <p>This page is a brief overview of my dissertation work. I will explain:</p>
     <ul>
         <li>how to <span class='train_word'>train</span> recurrent neural networks to predict audio</li>
@@ -84,7 +87,7 @@
     <div class="half_size left_floating_div" id="lstm_image_div">
         <!-- <svg id="svg" shape-rendering="geometricPrecision">
         </svg> -->
-        <object id="lstm_drawing" width='100%' data="lstm_drawing.svg" type="image/svg+xml" onload="add_animations()"></object>
+        <object id="lstm_drawing" width='100%' data="lstm_drawing.svg" type="image/svg+xml"></object>
         <!-- <img id="lstm_image" src=lstm.png> -->
     </div>
     <div class="half_size right_floating_div" id="overview_text_div">
@@ -131,7 +134,7 @@ for each time step:
     </div>
     <div class="right_floating_div half_size" id="training_image_div"><br>
       <!-- <img  src="training_futura.png"></div> -->
-      <object id="training" width="100%" data="training.svg" type="image/svg+xml"></object>
+      <object id="training" width="100%" data="updated_training.svg" type="image/svg+xml"></object>
     </div>
 </div>
 
@@ -140,7 +143,7 @@ for each time step:
 <div class="containing_div" id="sampling_div">
     <div class="half_size left_floating_div" id="sampling_image_div">
         <!-- <img id="sampling_image" src="generation_futura.png"> -->
-        <object id="sampling" width="100%" data="generation.svg" type="image/svg+xml"></object>
+        <object id="sampling" width="100%" data="updated_sampling_drawing.svg" type="image/svg+xml"></object>
     </div>
 
     <div class="half_size right_floating_div" id="sampling_text_div"><br>
