--- a/rnn_demo.html
+++ b/rnn_demo.html
@@ -667,7 +667,6 @@ console.log(i);
             var cur_item = group[p];
             cur_item.onmouseover = function(){
                                       for(var i=0;i<group.length; i++){
-                                          // let current               = group[i];
                                           group[i].style.background  = color;
                                       }
                                       for(var k=0; k<children.length; k++){
@@ -751,7 +750,7 @@ console.log(i);
 
     highlight_group(bin_words,    [bin_box_0 , bin_box_1],                orange,  'text_fade_orange 3s');
     highlight_group(interp_words, [interp_box],                           d_orange,  'text_fade_d_orange 3s');
-    highlight_group(osc_words,    [osc_0, osc_1, osc_2, osc_3, osc_4],    teal_3,  'text_fade_red 3s');
+    highlight_group(osc_words,    [osc_0, osc_1, osc_2, osc_3, osc_4],    teal_3,  'text_fade_teal_3 3s');
 
     highlight_group(one_one_words,[one_0, one_1],                         l_green,  'text_fade_l_green 3s');
     highlight_group(trans_words,  [trans_unrolling, trans_vec_len],       orange,  'text_fade_orange 3s');
